--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -11,6 +11,7 @@
 @import './pagination';
 @import './list';
 @import './inputs';
+@import './loader';
 
 @import './header';
 @import './hero';
@@ -29,4 +30,5 @@
 @import './thanks';
 @import './footer';
 @import './rules';
+@import './survey';
 @import './keyframes';
