--- a/src/scss/_inputs.scss
+++ b/src/scss/_inputs.scss
@@ -98,7 +98,7 @@ span.novalid-parent {
                 width: 100%;
                 height: 200px;
                 border-radius: 20px;
-                object-fit: cover;
+                object-fit: contain;
                 object-position: center;
 
                 @include mobile {
