выровнен экран посередине

--- a/src/scss/_survey.scss
+++ b/src/scss/_survey.scss
@@ -1,4 +1,14 @@
 .survey {
+    min-height: 100dvh;
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    justify-content: center;
+
+    section:first-child {
+        padding: 30px 20px;
+    }
+
     &-wrapper {
         display: grid;
         grid-template-columns: 3fr 1fr;
